--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-PORT = 5000
-UserEmail = "yahiyastc@gmail.com"
-UserPassword = "bytanyyxwnjqluwz"
+PORT = 8000
+UserEmail = yahiyastc@gmail.com
+UserPassword = ljoodrwfajhjefrf
+BaseURL = http://localhost:5500/frontend/
