--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT = 8000
 UserEmail = yahiyastc@gmail.com
 UserPassword = ljoodrwfajhjefrf
-BaseURL = http://localhost:5500/frontend/
+BaseURL = https://qthrs.pizzawizz.co.uk/
